--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,22 @@
-<html>
-    <body>
-        Hello
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="content.css">
+
+    <title>Recipe Tracker</title>
+</head>
+<body>
+    <div class="popup-container">
+        <h1 class="heading">Recipe Tracker</h1>
+        <div class="text">
+            <b>This extension will help dementia patients keep track of a cooking recipe by allowing them to mark completed steps and exiting them out. <br></b>
+            <b><br>Simply Click the button below as you go through the recipe!</b>
+        </div>
+        <div class="image-container">
+            <img src="complete.png" alt="myImage">
+        </div>
+    </div>
+</body>
 </html>
